WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
253325
[WebGPU] Some command_encoder CTS tests do not pass
https://bugs.webkit.org/show_bug.cgi?id=253325
Summary
[WebGPU] Some command_encoder CTS tests do not pass
Mike Wyrzykowski
Reported
2023-03-03 09:58:03 PST
[WebGPU] Some command_encoder CTS tests do not pass
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-03-03 09:58:54 PST
<
rdar://problem/106199852
>
Mike Wyrzykowski
Comment 2
2023-03-03 11:14:24 PST
Pull request:
https://github.com/WebKit/WebKit/pull/11013
EWS
Comment 3
2023-03-06 18:51:40 PST
Committed
261303@main
(e158a1d4ece2): <
https://commits.webkit.org/261303@main
> Reviewed commits have been landed. Closing PR #11013 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug