[WebGPU] Some command_encoder CTS tests do not pass https://bugs.webkit.org/show_bug.cgi?id=253325 <radar://106199852>

Reviewed by Myles C. Maxfield.

This patch fixes two issues:

(1) copying zero-size is a no-op according to the specification.
(2) texelBlockWidth/height are not generally powers of two, so we
can't use WTF::roundUpToMultipleOf which requires the first argument
to be a power of two.

* Source/WebGPU/WebGPU/CommandEncoder.mm:
(WebGPU::CommandEncoder::copyTextureToTexture):
No-op on zero size.

* Source/WebGPU/WebGPU/Texture.mm:
(WebGPU::Texture::physicalMiplevelSpecificTextureExtent):
We could have written our own, but there is already an implementation
in bmalloc which is usable with casting from size_t -> uint32_t

Canonical link: https://commits.webkit.org/261303@main